--- a/lib/lang/en/phrases/reports.xml
+++ b/lib/lang/en/phrases/reports.xml
@@ -7,6 +7,9 @@
 <epp:phrase id="Plugin/Screen/Report:title">Reports</epp:phrase>
 <epp:phrase id="Plugin/Screen/Report:no_reports">No available reports</epp:phrase>
 
+<epp:phrase id="reports_preset">Preset Reports</epp:phrase>
+<epp:phrase id="reports_custom">Custom Reports</epp:phrase>
+
 <!-- the Example reports -->
 <epp:phrase id="Plugin/Screen/Report/Example:title">Example</epp:phrase>
 <epp:phrase id="Plugin/Screen/Report/Example/Articles:title">Articles</epp:phrase>
