--- a/lib/lang/en/phrases/reports.xml
+++ b/lib/lang/en/phrases/reports.xml
@@ -19,6 +19,9 @@
 
 <epp:phrase id="Report:search_links"><div class="ep_view_group_by"><epc:pin name="links" /></div></epp:phrase>
 
+<epp:phrase id="report_select_label">Select Report:</epp:phrase>
+<epp:phrase id="export_select_label">Select Export Format:</epp:phrase>
+
 <!-- the Example reports -->
 <epp:phrase id="Plugin/Screen/Report/Example:title">Example</epp:phrase>
 <epp:phrase id="Plugin/Screen/Report/Example/Articles:title">Articles</epp:phrase>
