Minor updates to reporting framework to allow export to show field names rather than phrases and to allow for some CSS customisation of the export menu

--- a/lib/lang/en/phrases/reports.xml
+++ b/lib/lang/en/phrases/reports.xml
@@ -4,6 +4,8 @@
 
 <epp:phrase id="lib/report:loading">Loading report...</epp:phrase>
 
+<epp:phrase id="Update/Views:group_separator"> | </epp:phrase>
+
 <epp:phrase id="Plugin/Screen/Report:title">Reports</epp:phrase>
 <epp:phrase id="Plugin/Screen/Report:no_reports">No available reports</epp:phrase>
 
